[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.13.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-jtag-serial"] }
esp-println = { version = "0.7.0", default-features = false, features = [ "esp32s3","defmt","jtag_serial"] }
defmt = "0.3.5"
nb = "1.1.0"
